--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -29,7 +29,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
+  --bs-primary: #58063D;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -37,7 +37,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 13, 110, 253;
+  --bs-primary-rgb: 88, 6, 61;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -5778,10 +5778,16 @@ textarea.form-control-lg {
   width: 25% !important;
 }
 
+.w-15 {
+  width: 15% !important;
+}
 
 
 .w-50 {
   width: 50% !important;
+}
+.w-50px {
+  width: 50px !important;
 }
 
 .w-75 {
