--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,45 @@
+/* Seek bar for footer Audio */
+#seek-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #ccc;
+  border-radius: 0;
+  -webkit-appearance: none;
+}
+
+#seek-bar::-webkit-slider-runnable-track {
+  background-color: #ccc;
+  height: 4px;
+  border-radius: 0;
+}
+
+#seek-bar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+  transform: translateY(-3px);
+}
+
+.progress {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 0;
+  z-index: -1; /* Add this to send the progress bar behind the thumb */
+  transform: translateY(-2px);
+}
+
+
+
+
 .fa-rotate-180, .fa-rotate-90, [data-bs-toggle] i {
   transition: all 350ms ease;
 }
@@ -488,15 +530,15 @@ body {
 
 #footer-audio {
   position: fixed;
-  bottom: 0px;
+  bottom: 62px;
   left: 0px;
   right: 0px;
   z-index: 96;
   background-color: rgba(249, 249, 249, 0.98);
   box-shadow: 0 -5px 10px 0 rgba(0, 0, 0, 0.06);
-  min-height: 60px;
-  height: calc(120px + constant(safe-area-inset-bottom) * 1.1);
-  height: calc(120px + env(safe-area-inset-bottom) * 1.1);
+  min-height: 30px;
+  height: calc(80px + constant(safe-area-inset-bottom) * 1.1);
+  height: calc(80px + env(safe-area-inset-bottom) * 1.1);
   display: flex;
   text-align: center;
 }
